# GCP-Agent-Tester-App

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh
backend/: pyproject.toml
backend/app/: __init__.py  agent.py  config.py  main.py  runner.py  store.py  tools.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/run/: page.tsx
frontend/components/: theme-toggle.tsx  ui.tsx
frontend/lib/: api.ts  utils.ts
presentation/: agente.html  dettaglio-agente.html  dettaglio-backend.html  dettaglio-bigquery.html  dettaglio-frontend.html  dettaglio-github.html  dettaglio-prompt.html  dettaglio-tool.html  dettaglio.html  funzionamento.html  index.html  infrastruttura.html  speaker-script.md  styles.css  theme.js
